--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype.csproj
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Screens\ExamineItemScreen.xaml.cs">
       <DependentUpon>ExamineItemScreen.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\HelpScreen.xaml.cs">
+      <DependentUpon>HelpScreen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\PaymentScreen.xaml.cs">
       <DependentUpon>PaymentScreen.xaml</DependentUpon>
     </Compile>
@@ -96,6 +99,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Screens\ExamineItemScreen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Screens\HelpScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -212,6 +219,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Resource Include="Resources\Images\help_icon.png" />
     <Resource Include="Resources\Images\Drinks\gaslamp_blanc.jpeg" />
     <Resource Include="Resources\Images\Drinks\platinum_blonde.jpeg" />
     <Resource Include="Resources\Images\Drinks\belgian_white.jpeg" />
