--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype.csproj
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype.csproj
@@ -65,6 +65,9 @@
     <Compile Include="Pages\Page_Food.xaml.cs">
       <DependentUpon>Page_Food.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\ClosingScreen.xaml.cs">
+      <DependentUpon>ClosingScreen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\ExamineItemScreen.xaml.cs">
       <DependentUpon>ExamineItemScreen.xaml</DependentUpon>
     </Compile>
@@ -108,6 +111,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\Page_Food.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Screens\ClosingScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
