Added non-alcoholic beverages, touchscreen capability

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype.csproj
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype.csproj
@@ -71,6 +71,9 @@
     <Compile Include="Screens\ExamineItemScreen.xaml.cs">
       <DependentUpon>ExamineItemScreen.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\ExitScreen.xaml.cs">
+      <DependentUpon>ExitScreen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\GrayedOutWindow.xaml.cs">
       <DependentUpon>GrayedOutWindow.xaml</DependentUpon>
     </Compile>
@@ -125,6 +128,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Screens\ExamineItemScreen.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Screens\ExitScreen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -273,8 +280,11 @@
     <Resource Include="Resources\Images\btn_help_down_bg.png" />
     <Resource Include="Resources\Images\btn_specials_down_bg.png" />
     <Resource Include="Resources\Images\btn_exit.png" />
+    <Resource Include="Resources\Images\Drinks\coke.png" />
     <Content Include="Resources\Images\Drinks\heineken.jpeg" />
     <Content Include="Resources\Images\Drinks\prairie_pale_ale.jpeg" />
+    <Resource Include="Resources\Images\Drinks\water.png" />
+    <Resource Include="Resources\Images\Drinks\sprite.png" />
     <Content Include="Resources\Images\Drinks\west_coast_ipa.jpeg" />
     <Resource Include="Resources\Images\Food\sw_brisket_dip.jpg" />
     <Resource Include="Resources\Images\Food\sw_grilled_cheese.jpg" />
